Demo webclient llamado de msvc-administrative a msvc-producto, actualización de yaml DTO agregado producto
